# learning-cmake

./: .gitignore
01_HelloWorld/: CMakeLists.txt
